<resources>
    <string name="app_name">Navkar</string>
    <string name="namokar_mantra_jaap">Namokar Mantra Jaap</string>
    <string name="timer">00:00:00</string>
    <string name="jaap_time">Jaap Time</string>
    <string name="namokar_count">Namokar Count</string>
    <string name="counter">0</string>
    <string name="start_btn">Start</string>
    <string name="pause_btn">Pause</string>
    <string name="stop_btn">Stop</string>
    <string name="set_your_time_in_seconds_per_mantra">Set your time in seconds per mantra:</string>
    <string name="how_many_seconds_do_you_take_to_chant_a_namokar">Average time to chant one Namokar is 9 Seconds.</string>
    <string name="navkar_mantra_image">navkar_mantra_image</string>
    <string name="register">Register</string>
    <string name="user_name">Username</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="reset">Reset</string>
</resources>