<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navkar_logo_bg"
    tools:context=".Login">

    <EditText
        android:id="@+id/loginIdET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_mail_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPwET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loginIdET"
        app:layout_constraintStart_toStartOf="@+id/loginIdET"
        app:layout_constraintTop_toBottomOf="@+id/loginIdET" />

    <TextView
        android:id="@+id/forgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPwET"
        app:layout_constraintTop_toBottomOf="@+id/loginPwET" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPwET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginPwET"
        app:layout_constraintTop_toBottomOf="@+id/forgotPW" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toStartOf="@+id/fbBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/fbBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_facebook_icon"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="@+id/googleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/googleBtn"
        app:layout_constraintTop_toTopOf="@+id/googleBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>